--- a/example/src/root/index.html
+++ b/example/src/root/index.html
@@ -12,7 +12,7 @@
 <body>
 	<header>
 		<h1>Gobble</h1>
-		<p>The last build tool you'll ever need</p>
+		<p>The last build tool you'll ever need?</p>
 	</header>
 
 	<img src='gobble-logo.svg'>
